<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactBusinessActivity">


    <Button
        android:id="@+id/button6"
        android:layout_width="164dp"
        android:layout_height="90dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="68dp"
        android:onClick="mainActivity"
        android:text="@string/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="OnClick" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="478dp"
        android:layout_height="284dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/image_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/starbucks_image_3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="324dp"
        android:layout_height="578dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/contact" />

    <Button
        android:id="@+id/button5"
        android:layout_width="164dp"
        android:layout_height="90dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="68dp"
        android:onClick="aboutActivity"
        android:text="@string/about_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>