<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button2"
        android:layout_width="164dp"
        android:layout_height="90dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="380dp"
        android:layout_marginBottom="68dp"
        android:onClick="contactActivity"
        android:text="@string/contact_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button1"
        android:layout_width="164dp"
        android:layout_height="90dp"
        android:layout_marginStart="380dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="68dp"
        android:onClick="aboutActivity"
        android:text="@string/about_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        tools:ignore="OnClick" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="308dp"
        android:layout_height="298dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="83dp"
        android:background="#E22F6D24"
        android:contentDescription="@string/image_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/starbucks_image" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="449dp"
        android:layout_height="196dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:text="@string/home_text"
        android:textColor="#0B5318"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
