<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutBusinessActivity">


    <Button
        android:id="@+id/button3"
        android:layout_width="164dp"
        android:layout_height="90dp"
        android:layout_marginStart="199dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="68dp"
        android:onClick="contactActivity"
        android:text="@string/contact_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button4"
        android:layout_width="164dp"
        android:layout_height="90dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="68dp"
        android:onClick="mainActivity"
        android:text="@string/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="OnClick" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="350dp"
        android:layout_height="225dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/image_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@drawable/starbucks_image_2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="500dp"
        android:layout_height="225dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/about_text"
        android:textColor="#FA800365"
        android:textColorHighlight="#B52717B4"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

</androidx.constraintlayout.widget.ConstraintLayout>